fixup stat service
